# swkb

./: Cargo.toml  PKGBUILD  README  README.md  tmp_builder.py
.github/workflows/: PKGBUILD
assets/: PKGBUILD.jinja
src/: main.rs
