[package]
name = "sway-layout"
version = "0.2.0"
authors = ["Alexandr Bogomyakov <abogomyakov@iponweb.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
futures-core = { version = "0.3", optional = true }
async-std = { version = "1.6", features = ["attributes", "unstable"], optional = true }
swayipc = {version = "2.7.0", features = ["async", "event_stream"]}

[features]
async = ["async-std"]
event_stream = ["futures-core"]
unstable = []

#[dependencies.swayipc]
#features = ["async", "event_stream"]
