[package]
name = "swkb"
version = "0.2.4"
authors = ["Alexandr Bogomyakov <abogomyakov@iponweb.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
swayipc = {version = "2.7.0", features = [ "event_stream"]}

#[dependencies.swayipc]
#features = ["async", "event_stream"]

[packaging]
depends = ["sway"]
makedepends = ["cargo", "git"]
