[package]
name = "swkb"
version = "0.2.4"
authors = ["Alexandr Bogomyakov <abogomyakov@iponweb.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swayipc = {version = "2.7.0", features = [ "event_stream"]}
single-instance = "0.1.2"
xdg = "*"

[packaging]
depends = ["sway"]
makedepends = ["cargo", "git"]
